kubernetes/ckad/webapp/webapp-mysql-static/webapp-mysql-static-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: webapp
  name: webapp-mysql-static-service
  labels:
    app: webapp-mysql-static
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: webapp-mysql-static
  type: ClusterIP
